Hopefully fixed text wrapping bug on mobile, disabled map hover on mobile, got rid of hook warning

--- a/src/styles/timeline.module.scss
+++ b/src/styles/timeline.module.scss
@@ -187,6 +187,7 @@
           color: mixin.$gravl-blue;
           font-weight: 400;
           text-transform: uppercase;
+          white-space: nowrap;
         }
 
         .desktop {
